--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     --gast-accent:#1A6E6E; --gast-dark:#0F3D3D; --gast-gold:#76D7C4;
   }
   *{margin:0;padding:0;box-sizing:border-box;}
-  body{font-family:Helvetica,Arial,sans-serif;background:var(--tm-bg);color:var(--tm-text);min-height:100vh;}
+  body{font-family:Helvetica,Arial,sans-serif;background:var(--tm-bg);color:var(--tm-text);min-height:100vh;overscroll-behavior:none;}
   .header{background:linear-gradient(135deg,var(--tm-blue) 0%,var(--tm-blue-light) 100%);padding:1.2rem 1.5rem;display:flex;align-items:center;gap:1rem;position:relative;}
   .header::after{content:'';position:absolute;bottom:0;left:0;right:0;height:3px;background:linear-gradient(90deg,var(--tm-gold),#E8D59E,var(--tm-gold));}
   .header-logo{height:48px;flex-shrink:0;}
